--- a/src/components/SelectInput/style.scss
+++ b/src/components/SelectInput/style.scss
@@ -1,4 +1,4 @@
-.select {
+.select-container {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -11,10 +11,14 @@
   }
 
   .select-field {
-    width: 230px;
-    padding: 15px;
+    width: 232px;
     border-radius: 15px;
-    border: 1px solid #e5e5e5;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+
+    .select__control {
+      border: 1px solid #e5e5e5;
+      padding: 5px;
+      border-radius: 15px;
+    }
   }
 }
