--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -1,4 +1,4 @@
-.input {
+.input-container {
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -16,5 +16,52 @@
     border-radius: 15px;
     border: 1px solid #e5e5e5;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+  }
+}
+
+.date-container {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  .date-label {
+    color: #333333;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .date-field {
+    width: 200px;
+    border-radius: 15px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+    border: 1px solid #e5e5e5;
+    padding: 15px;
+    border-radius: 15px;
+  }
+}
+
+.select-container {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  .select-label {
+    color: #333333;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  .select-field {
+    width: 232px;
+    border-radius: 15px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+
+    .select__control {
+      border: 1px solid #e5e5e5;
+      padding: 5px;
+      border-radius: 15px;
+    }
   }
 }
