--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -12,5 +12,11 @@
     border-radius: 15px;
     border: none;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+    transition: transform .2s;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.15);
+    }
   }
 }
