--- a/src/components/Input/style.scss
+++ b/src/components/Input/style.scss
@@ -16,6 +16,8 @@
 
   .input-field,
   .date-field {
+    font-size: 15px;
+    color: #808080;
     width: 200px;
     padding: 15px;
     border-radius: 15px;
