--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,9 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #f3f3f5;
 }
+
+.error-message {
+  color: #ff0000;
+  font-size: 0.8rem;
+  margin-top: 5px;
+}
