General code update

--- a/src/components/Form/style.scss
+++ b/src/components/Form/style.scss
@@ -12,7 +12,7 @@
     border-radius: 15px;
     border: none;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
-    transition: transform .2s;
+    transition: transform 0.2s;
 
     &:hover {
       cursor: pointer;
